Fix warnings identified by Error Prone